--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
-  "printWidth": 100,
+  "printWidth": 80,
   "semi": false,
-  "jsxBracketSameLine": true
+  "trailingComma": "es5",
+  "singleQuote": false,
+   "jsxBracketSameLine": true
 }
