--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "parcel-bundler": "^1.12.3"
   },
   "scripts": {
-    "start": "parcel src/view/*.html",
-    "build": "parcel build src/html/*.html"
+    "start": "parcel serve -d build src/view/*.html",
+    "build": "parcel build -d dist src/view/*.html"
   },
   "eslintConfig": {
     "extends": "react-app"
