--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+/.idea
 /node_modules
 /build
 /.cache
@@ -12,5 +11,3 @@ yarn-debug.log*
 yarn-error.log*
 
 
-
-/idea
