--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "CC0 1.0 Universal",
   "private": true,
   "dependencies": {
+    "dot-prop": "5.1.1",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1"
   },
