--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "license": "CC0 1.0 Universal",
   "private": true,
   "dependencies": {
+    "acorn": "6.4.1",
     "dot-prop": "5.1.1",
+    "kind-of": "6.0.3",
+    "minimist": "1.2.3",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1"
   },
