upgrade project to parcel2

--- a/package.json
+++ b/package.json
@@ -3,17 +3,10 @@
   "version": "0.1.0",
   "license": "CC0 1.0 Universal",
   "private": true,
-  "dependencies": {
-    "acorn": "6.4.1",
-    "dot-prop": "5.1.1",
-    "kind-of": "6.0.3",
-    "minimist": "1.2.3",
-    "parcel-bundler": "^1.12.4",
-    "prettier": "^1.19.1"
-  },
+  "dependencies": {},
   "scripts": {
-    "start": "parcel serve -d build src/view/*.html",
-    "build": "parcel build -d dist src/view/*.html"
+    "start": "parcel serve --dist-dir build src/view/*.html",
+    "build": "parcel build --dist-dir dist src/view/*.html"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,8 +24,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "typescript": "^3.7.4"
+    "@babel/core": "^7.12.0",
+    "parcel": "^2.4.1"
   }
 }
